# nfl-app

./: .env.example  .gitignore  README.md
backend/: pyproject.toml  railway.toml  test.db-journal
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_elo.py  0003_model_artifacts.py  0004_data_sync_runs.py  0005_materialized_stats.py  0006_metric_index.py  0007_feature_store_and_lifecycle.py  0008_endpoint_slo_and_experiments.py  0009_sparky.py  0010_sparky_variable_legs.py  0011_bets.py  0012_player_props.py  (+7 more)
backend/app/: __init__.py  cache.py  config.py  db.py  deps.py  logging_config.py  main.py  rate_limits.py  security.py  sentry_init.py  startup_doctor.py
backend/scripts/: run_sparky_backtest.py
backend/tests/: conftest.py  test_admin_overrides.py  test_auth.py  test_bets.py  test_betting_service.py  test_cost_service.py  test_data_freshness_service.py  test_endpoint_slo_service.py  test_epa_adjust.py  test_experiment_service.py  test_fantasy_market_service.py  test_health.py  test_kalshi_adapter.py  test_market_anchoring.py  test_market_calibration.py  test_market_service.py  test_model_inputs.py  test_model_lifecycle_service.py  test_model_params.py  test_news_tagger.py  test_player_projection_engine.py  test_player_projections_leaderboard.py  test_prediction_dist.py  test_projections_board.py  test_rankings.py  test_request_budget_service.py  test_seasons_util.py  test_sparky_engine.py  test_sparky_service.py  test_task_modeling_service.py  test_team_aliases_canonical.py  test_uncertainty_service.py  test_weekly_board_and_props.py
(+355 files in other folders)
