[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl-app-backend"
version = "0.1.0"
requires-python = ">=3.11"
description = "Statletics NFL backend — FastAPI + SQLAlchemy + AI"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.2",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "anyio>=4.4",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10",
    "feedparser>=6.0",
    "nfl-data-py>=0.3.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "tenacity>=9.0",
    "structlog>=24.1",
    "orjson>=3.10",
    "ulid-py>=1.1",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.10",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a reachable database (auto-skip otherwise)",
]
